--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 
     <link rel="stylesheet" href="./styles/output.css">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MegaBurguer - O melhor hamburguer que existe">
+    <meta property="og:image" content="https://projeto-cardapio-ruddy.vercel.app/assets/hamb-1.png">
+    <meta property="og:description" content="O melhor hamburguer da região!">
+    <meta property="og:site_name" content="MegaBurguer">
+
     <title>MegaBurguer - Cardápio</title>
 </head>
 
